--- a/soft/app/ticketServiceApp2/build.gradle
+++ b/soft/app/ticketServiceApp2/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     testRuntime 'org.seleniumhq.selenium:selenium-htmlunit-driver:2.44.0'
 
     console "org.grails:grails-console"
+
+    runtime 'org.grails.plugins:grails-console:2.0.3'
 }
 
 task wrapper(type: Wrapper) {
